Fixes all the responsive and alignment issues

--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -5,6 +5,7 @@ html {
 html, body {
 	margin: 0;
 	padding: 0;
+	min-width: 400px;
 }
 
 body {
