--- a/_sass/forms.scss
+++ b/_sass/forms.scss
@@ -48,6 +48,10 @@ label {
 	padding-right: 30px;
 }
 
+label:hover {
+	cursor: pointer;
+}
+
 input, textarea {
 	padding: 10px;
 	font-size: 1em;
